--- a/index.html
+++ b/index.html
@@ -29,12 +29,6 @@
             user-select: none;
         }
 
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-
         .b-example-vr {
             flex-shrink: 0;
             width: 1.5rem;
@@ -77,7 +71,7 @@
 
         .left-pane h1 {
             margin-top: 130px;
-
+            padding-left: 3rem !important;
         }
 
         .bottom-text {
@@ -87,6 +81,28 @@
             right: 0;
             margin-left: auto;
             margin-right: auto;
+        }
+
+        .logo {
+            width: 30%;
+            margin-left: 3rem !important;
+        }
+
+        @media (max-width: 767.98px) {
+            .left-pane h1 {
+                font-size: 55px !important;
+                margin-top: 100px;
+                padding-left: 2rem !important;
+            }
+
+            .logo {
+                width: 50%;
+                margin-left: 2rem !important;
+            }
+
+            .fw-bold {
+                font-weight: 500 !important;
+            }
         }
     </style>
 </head>
@@ -100,10 +116,9 @@
             <div class="row">
                 <div class="col-md-8 left-pane p-0">
                     <div class='inner-left-pane'>
-                        <img class="d-block mb-4 mx-5" src="logo.jpg" alt=""
-                            style="width: 30%; position: relative; z-index: 10" heght="57">
+                        <img class="d-block mb-4 logo" src="logo.jpg" alt="">
 
-                        <h1 class="display-4 fw-bold lh-1 p-5">Where the freezer aisle meets innovation
+                        <h1 class="display-4 fw-bold lh-1">Where the freezer aisle meets innovation
                         </h1>
                         <div class="bottom-text text-white text-center">
                             <p class="lead text-center align-items-center">Currently on ice...freezing...</p>
