--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         }
 
         .left-pane h1 {
-            margin-top: 130px;
+            margin-top: 150px;
             padding-left: 3rem !important;
         }
 
@@ -118,7 +118,7 @@
                     <div class='inner-left-pane'>
                         <img class="d-block mb-4 logo" src="logo.jpg" alt="">
 
-                        <h1 class="display-4 fw-bold lh-1">Where the freezer aisle meets innovation
+                        <h1 class="display-2 fwbold lh-1">Where the freezer aisle <br /> meets innovation
                         </h1>
                         <div class="bottom-text text-white text-center">
                             <p class="lead text-center align-items-center">Currently on ice...freezing...</p>
