--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
         @media (max-width: 767.98px) {
             .left-pane h1 {
                 font-size: 55px !important;
-                margin-top: 100px;
-                padding-left: 2rem !important;
+                margin-top: 110px;
+                padding: 0 !important;
+                text-align: center;
             }
 
             .logo {
