--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
         @media (max-width: 767.98px) {
             .left-pane h1 {
-                font-size: 55px !important;
+                font-size: 40px !important;
                 margin-top: 110px;
-                padding: 0 !important;
+                padding: 15px !important;
                 text-align: center;
             }
 
@@ -119,7 +119,7 @@
                     <div class='inner-left-pane'>
                         <img class="d-block mb-4 logo" src="logo.jpg" alt="">
 
-                        <h1 class="display-2 fwbold lh-1">Where the freezer aisle <br /> meets innovation
+                        <h1 class="display-2 fwbold lh-1">Where the freezer aisle meets innovation
                         </h1>
                         <div class="bottom-text text-white text-center">
                             <p class="lead text-center align-items-center">Currently on ice...freezing...</p>
